# ZommatoAIRecommendedMeal

./: .gitignore  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE6_IMPLEMENTATION_SUMMARY.md  Procfile  README.md  investigate_data.py  load_data.py  render.yaml  requirements.txt  setup.cfg  show_llm_output.py  test_api_endpoints.py  test_db.py  test_delhi_original_request.py  test_phase4.py  test_phase4_bangalore.py  test_with_restaurant_names.py
docs/: DetailedEdgeCases.md  FrontendArchitecture.md  PhaseWiseArchitecture.md  ProblemStatement.md
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/store/: useRecommendationStore.ts
frontend/src/types/: api.ts
src/zomoto_ai/: __main__.py  config.py
src/zomoto_ai/backend/: README.md  __init__.py  __main__.py  config.py
src/zomoto_ai/domain/: __init__.py  models.py
src/zomoto_ai/llm/: __init__.py  stub.py
src/zomoto_ai/phase0/: config.py
src/zomoto_ai/phase1/: build_index.py
src/zomoto_ai/phase2/: web_ui.py
src/zomoto_ai/phase3/: models.py  retrieval.py
src/zomoto_ai/phase4/: groq_ranker.py  parsing.py  prompting.py  validation.py
streamlit_app/: .gitignore  README.md  app.py  requirements.txt
streamlit_app/.streamlit/: config.toml
streamlit_app/components/: api.py  ui.py  utils.py
tests/phase0/: test_models.py
tests/phase1/: test_build_index_helpers.py
tests/phase2/: test_web_ui_parsing.py
tests/phase3/: test_retrieval.py
tests/phase4/: test_parsing_and_validation.py
(+53 files in other folders)
