[metadata]
name = zomoto-ai-recommendation
version = 0.1.0
description = AI-powered restaurant recommendation system (phase-wise).
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pydantic>=2.7,<3

[options.packages.find]
where = src

